# jerryquant101

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  PLAN.md  README.md  SKILL.md  basic_config.yaml.example  index.html  machine_config.yaml  mkdocs.yml  pyproject.toml  sitemap.xml
.claude/: PERSONA.md
.github/workflows/: deploy-docs.yml
architecture/modules/: index.html
architecture/overview/: index.html
changelog/: index.html
docs/: index.md  quant_lab.tex
docs/architecture/: modules.md  overview.md
docs/getting-started/: data-setup.md  quickstart.md
docs/lessons/: quant-notes.md
docs/research/: factor-workflow.md  position-sizing.md  validation.md
getting-started/data-setup/: index.html
getting-started/quickstart/: index.html
guidance/: quant_lab.tex
lessons/quant-notes/: index.html
notebooks/: 1.1alpha_research.ipynb  1.2.alpha_iteration.ipynb  2.risk_analysis.ipynb  3.cost_analysis.ipynb  4.validation.ipynb  5.1.pipeline_demo.ipynb  5.2.factor_diagnostics.ipynb  6hstock-price-prediction-sample.ipynb  a.universe_build.ipynb  alpha_iteration.ipynb  alpha_research.ipynb  cost_analysis.ipynb  duckdb_learn.ipynb  exploration.ipynb  factor_diagnostics.ipynb  pipeline_demo.ipynb  polars_learn.ipynb  risk_analysis.ipynb  stock-price-prediction-sample.ipynb  usage_stroage.ipynb  validation.ipynb
research/factor-workflow/: index.html
research/position-sizing/: index.html
research/validation/: index.html
scripts/: file_examiner.py  longport_test.py  low_volume_ticker_checker.py  low_volume_ticker_update.py  test.py  weekly_update.sh  write_low_volume_ticker_csv.py  write_overview_csv.py
scripts/incremental_update/: data_update.sh  low_volume_ticker_update.py  weekly_update.sh
search/: search_index.json
skills/: PERSONA.md
src/: config.py  constants.py  main.py  test_performance_analyzer_unit.py
src/alpha/: __init__.py  combination.py  factor_analyzer.py  factor_backtest.py  forward_returns.py  preprocessing.py  test_combination_alignment.py  test_factor_backtest.py
src/backtest/: __init__.py  backtester.py  engine.py  performance_analyzer.py  portfolio_tracker.py  result_exporter.py  strategy_base.py  trades_analyzer.py  visualizer.py  weight_backtester.py
src/backtesting/: backtest_pre_data.py  backtester.py  engine.py  performance_analyzer.py  strategy_base.py  visualizer.py
src/core_2/: config.py  data_loader.py  plotter.py  s3_data_loader.py
src/cores/: config.py  data_loader.py  s3_data_loader.py
src/data/fetcher/: all_tickers_fetch.py  csvgz_to_parquet.py  fetch_from_server.py  fmp_fundamental_fetch.py  indices_fetch.py  polygon_downloader.py  splits_fetch.py
src/data/loader/: __init__.py  benchmark_loader.py  data_loader.py  date_utils.py
src/data_1/: all_tickers_fetch.py  csvgz_to_parquet.py  data_fetch_yfinance.py  polygon_downloader.py  splits_fetch.py  versatile_tickers_fetch.py  yfinance_data_fetch.py
src/data_1/data_discrepancy_fixed/: low_volume_tickers_copy.csv  splits_error.csv
src/data_fecther/: all_tickers_fetch.py  csvgz_to_parquet.py  polygon_downloader.py  splits_fetch.py  versatile_tickers_fetch.py
src/data_fecther/data_discrepancy_fixed/: ohlcv_data_error.csv
src/data_fetcher/: all_tickers_fetch.py  csvgz_to_parquet.py  fetch_from_server.py  fmp_fundamental_fetch.py  indices_fetch.py  polygon_downloader.py  splits_fetch.py  versatile_tickers_fetch.py  yfinance_data_fetch.py
src/data_fetcher/data_discrepancy_fixed/: low_volume_tickers.csv
src/data_processor/: low_volume_ticker_checker.py
src/data_processor.py/: low_volume_ticker_checker.py
src/data_supply/: __init__.py  data_loader.py  path_loader.py  ticker_utils.py
src/examples/: plot_ticker.py
src/execution/: __init__.py  cost_analysis.py  cost_model.py
src/factors/: __init__.py  factors.py
src/factors/alphas/: __init__.py  alpha101.py  basic101.py  bbiboll.py  momentum.py  operator.py  vol_ratio.py
src/indicators/: __init__.py  basic_indicator.py  bbiboll_indicator.py
src/live_monitor/market_mover_monitor/: README.md  __init__.py  analyzer.py
src/live_trade/: live_news_fetcher.py  live_polygon.py  market_mover_monitor.md  market_mover_monitor.py  web_socket.py
src/live_trade/market_mover/: WEB_ANALYZER_README.md  analyzer.py  collector.py  data_manager.py  replayer.py  start.py  trades_replayer_v2.py  trades_replayer_v3.py  trades_v1_replayer.py  web_analyzer.py
src/live_trade/market_mover_monitor/: analyzer.py  collector.py  data_manager.py  start.py  trades_replayer_v3.py  web_analyzer.py
src/longport/: longport.py  update_watchlist.py
src/portfolio/: __init__.py  alpha_config.py  factors.py  pipeline.py  walk_forward_runner.py
src/quant101/: candlestick.py  main.py
src/quant101/1_data/: CSVGZ_TO_PARQUET_GUIDE.md  csvgz_to_parquet.py  fetch_splits.py  polygon_downloader.py  splits_error.py  (+1 more)
src/risk/: __init__.py  position_sizing.py  return_analysis.py  risk_metrics.py  test_position_sizing.py
src/strategies/: bbibollStrategy.py  trades_analyzer.py
src/strategy/: __init__.py  bbiboll_strategy.py
src/utils/: logger.py  longbridge_utils.py  tickers_name_alignment_pandas.py  tickers_name_alignment_polars.py
src/validation/: __init__.py  multiple_testing.py  statistical_tests.py  walk_forward.py
src/visualizer/: figure.py
tests/: conftest.py  test_alpha.py  test_alpha_config.py  test_backtest_refactor.py  test_execution.py  test_hello.py  test_portfolio.py  test_position_sizing.py  test_risk.py  test_validation.py
(+98 files in other folders)
