[project]
name = "quant101"
version = "0.4.0"
description = ""
authors = [
    {name = "JerryHong",email = "huntcamilla06@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "polars (>=1.32.0,<2.0.0)",
    "numpy",
    "scipy",
    "matplotlib (>=3.10.5,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "pyarrow (>=21.0.0,<22.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "pyyaml (>=6.0.0,<7.0.0)",
    "boto3 (>=1.40.7,<2.0.0)",
    "botocore (>=1.40.7,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "duckdb (>=1.3.2,<2.0.0)",
    "s3fs (>=2025.9.0,<2026.0.0)",
    "polygon-api-client (>=1.15.3,<2.0.0)",
    "yfinance (>=0.2.65,<0.3.0)",
    "exchange-calendars (>=4.11.1,<5.0.0)",
    "ta-lib (>=0.6.6,<0.7.0)",
    "ta (>=0.11.0,<0.12.0)",
    "httpx[socks] (>=0.28.1,<0.29.0)",
    "quantstats (>=0.0.77,<0.0.78)",
    "longport (>=3.0.12,<4.0.0)",
    "seolpyo-mplchart (>=1.4.1.3,<2.0.0.0)",
    "ipywidgets (>=8.1.7,<9.0.0)",
    "plotly",
]

[tool.poetry]
packages = [{include = "*", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pre-commit = "^4.3.0"
ipykernel = "^6.30.1"
black = "^25.1.0"
isort = "^6.0.1"
commitizen = "^4.9.1"
pytest-asyncio = "^1.3.0"

[tool.poetry.group.ml.dependencies]
# Install with: poetry install --with ml
lightgbm = "^4.6.0"
optuna = "^4.5.0"
pytorch-tabnet = "^4.1.0"
tensorflow = "^2.20.0"

[tool.poetry.group.infra.dependencies]
# Install with: poetry install --with infra
redis = "^6.4.0"
flask = "^3.1.2"
flask-socketio = "^5.5.1"
influxdb-client = "^1.49.0"
pydantic = "^2.12.4"
igraph = "^0.11.9"
lxml = "^6.0.2"
anywidget = "^0.9.18"
massive = "^2.0.3"
prometheus-client = "^0.23.1"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--ignore=data --ignore=scripts/run_backtest.py"
asyncio_mode = "auto"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
